<resources>
    <string name="app_name">Woordenschat Training</string>
    <string name="action_settings">Settings</string>

    <string name="voormetingsButton">Start test</string>
    <string name="beherenButton">Gebruikers beheren</string>
    <string name="overzichtButton">Overzicht kind</string>
    <string name="kinderenBeherenListView">Kinderen:</string>
    <string name="inputNaam">Naam:</string>
    <string name="inputGroep">Groep:</string>
    <string name="opslaanButton">Opslaan</string>
    <string name="verwijderenButton">Verwijderen</string>
    <string name="verwijderTestenButton">Verwijder testen</string>
    <string name="nieuwButton">Nieuw</string>
    <string name="editUserLabel">Gebruiker aanpassen</string>
    <string name="selectUserLabel">Gebruiker selecteren</string>

    <string name="selectConditie">Kies een conditie</string>
    <string name="conditie1Button">1</string>
    <string name="conditie2Button">2</string>
    <string name="conditie3Button">3</string>

    <string name="resultaatTitel">Resultaat van de test</string>

    <string name="title_activity_voormeting">VoormetingActivity</string>
    <string name="title_activity_group">groupActivity</string>
    <string name="title_activity_preteaching">PreteachingActivity</string>
    <string name="title_activity_beheren">BeherenActivity</string>
    <string name="title_activity_conditie">conditie</string>
    <string name="title_activity_oef1">oef1Activity</string>
    <string name="title_activity_oef2">oef2Activity</string>
    <string name="title_activity_oef3">oef3Activity</string>
    <string name="title_activity_oef4">Oef4Activity</string>
    <string name="title_activity_oef6">Oef6Activity</string>
    <string name="title_activity_resultaat">ResultaatActivity</string>
    <string name="title_activity_oef6_2">Oef6_2Activity</string>
    <string name="title_activity_oef6_3">Oef6_3Activity</string>
    <string name="title_activity_oef5">Oef5Activity</string>
    <string name="title_activity_testen_kind">TestenKindActivity</string>
</resources>
