<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ConditieActivity"
    tools:showIn="@layout/activity_conditie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectConditie"
            android:textSize="15dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/layout_groep"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <Button
                android:id="@+id/groep1"
                android:tag="1"
                android:padding="50px"
                android:layout_margin="30px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClickGroep"
                android:text="@string/conditie1Button" />

            <Button
                android:id="@+id/groep2"
                android:tag="2"
                android:padding="50px"
                android:layout_margin="30px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClickGroep"
                android:text="@string/conditie2Button" />

            <Button
                android:id="@+id/groep3"
                android:tag="3"
                android:padding="50px"
                android:layout_margin="30px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClickGroep"
                android:text="@string/conditie3Button" />
        </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>